--- a/ObjectTracking/Cargo.toml
+++ b/ObjectTracking/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.51"
+color-eyre = "0.5.11"
 opencv = { version = "0.61", features = ["highgui", "ximgproc"] }
 
 [[bin]]
